ingress/nginx-ingress-manifest/simple-app-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-app
  labels:
    app: apple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apple
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
        - name: apple-app
          image: hashicorp/http-echo
          args:
            - "-text=apple"
          imagePullPolicy: IfNotPresent


---

kind: Service
apiVersion: v1
metadata:
  name: apple-service
spec:
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image

---
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app: "apple"
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
  name: "apple-ingress"       
spec:
  ingressClassName: nginx
  rules:
  - host: "apple.packops.local"
    http:
      paths:
      - backend:
          service:
            name: "apple-service"
            port:
              number: 5678
        path: /
        pathType: ImplementationSpecific
